--- a/feelow/build.gradle
+++ b/feelow/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
